# Prosjektoppgave_Oystein_Bringsli

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml  cmake-multi-platform.yml
examples/: CMakeLists.txt  GravityBetweenParticles.cpp  GravityToCenter.cpp  GravityToGround.cpp  SimpleExample.cpp  test.cpp
include/: GravityControl.hpp  GravityObject.hpp  MyKeyListener.hpp  Particle.hpp  ParticleHandler.hpp  ThreeppHandler.hpp  Vec2.hpp  Vec3.hpp
src/: CMakeLists.txt  GravityControl.cpp  GravityObject.cpp  MyKeyListener.cpp  Particle.cpp  ParticleHandler.cpp  ThreeppHandler.cpp  Vec2.cpp  Vec3.cpp  main.cpp
